docs/api/qiskit/0.29/ibmq_experiment.mdx
---
title: experiment (v0.29)
description: API reference for qiskit.providers.ibmq.experiment in qiskit v0.29
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.providers.ibmq.experiment
---

<span id="module-qiskit.providers.ibmq.experiment" />

<span id="qiskit-providers-ibmq-experiment" />

<span id="experiment-qiskit-providers-ibmq-experiment" />

# Experiment

`qiskit.providers.ibmq.experiment`

Modules related to IBM Quantum experiment service.

<Admonition title="Note" type="note">
  This service is not available to all accounts.
</Admonition>

You can use the experiment service to query, upload, and retrieve experiments, experiment figures, and analysis results. For example:

```python
from qiskit import IBMQ
provider = IBMQ.load_account()
experiments = provider.experiment.experiments()
```

All the available functions can be invoked using the provider.experiment attribute, which is an instance of the [`IBMExperimentService`](qiskit.providers.ibmq.experiment.IBMExperimentService "qiskit.providers.ibmq.experiment.IBMExperimentService") class.

This service is intended to be used in conjunction with the `qiskit-experiments` package, which allows you to create different types of experiments (for example, `qiskit_experiments.library.characterization.T1`).

## Classes

|                                                                                                                                                   |                                              |
| ------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------- |
| [`IBMExperimentService`](qiskit.providers.ibmq.experiment.IBMExperimentService "qiskit.providers.ibmq.experiment.IBMExperimentService")(provider) | Provides experiment related services.        |
| [`ResultQuality`](qiskit.providers.ibmq.experiment.ResultQuality "qiskit.providers.ibmq.experiment.ResultQuality")(value)                         | Possible values for analysis result quality. |
| [`DeviceComponent`](qiskit.providers.ibmq.experiment.DeviceComponent "qiskit.providers.ibmq.experiment.DeviceComponent")()                        | Class representing a device component.       |

## Exceptions

|                                                                                                                                                                      |                                                                 |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| [`IBMExperimentError`](qiskit.providers.ibmq.experiment.IBMExperimentError "qiskit.providers.ibmq.experiment.IBMExperimentError")(\*message)                         | Base class for errors raised by the experiment service modules. |
| [`IBMExperimentEntryExists`](qiskit.providers.ibmq.experiment.IBMExperimentEntryExists "qiskit.providers.ibmq.experiment.IBMExperimentEntryExists")(\*message)       | Errors raised when an experiment entry already exists.          |
| [`IBMExperimentEntryNotFound`](qiskit.providers.ibmq.experiment.IBMExperimentEntryNotFound "qiskit.providers.ibmq.experiment.IBMExperimentEntryNotFound")(\*message) | Errors raised when an experiment entry cannot be found.         |

